added mdx support to add in YouTube videos

--- a/src/content/comp-experience/game/combo-spells.mdx
+++ b/src/content/comp-experience/game/combo-spells.mdx
@@ -13,6 +13,8 @@ summaryPoints:
 itchio: https://penrabbit.itch.io/combo-spells
 ---
 
+import { YouTube } from "astro-embed";
+
 # Originally a School Project
 
 Play as a magician and use different combinations of keys to create and synergize with the spells's elements to get the highest score damage on the dummy!
@@ -31,6 +33,8 @@ This is what I've added:
 - Menu GUI
 - Updated graphics
 - In-game Tutorial Manual
+
+<YouTube id="https://youtu.be/ANaru-Nq96k?si=TJJLcjMwRckAe3YP" />
 
 # How it was created?
 
