--- a/src/content/comp-experience/game/king-of-the-cheese.mdx
+++ b/src/content/comp-experience/game/king-of-the-cheese.mdx
@@ -1,7 +1,7 @@
 ---
 title: King of the Cheese
 description: King of the Hat fan-game where you play as Dark Birthday and eat cheese in his dreams
-coverImage: ./king-of-cheese/cover.png
+coverImage: ./king-of-the-cheese/cover.png
 coverImageAlt: Dark Birthday eating cheese in his dreams
 summaryPoints:
   - A fan-game for King of the Hat. Started as a meme within the community
@@ -14,6 +14,8 @@ itchio: https://penrabbit.itch.io/king-of-the-cheese
 github: https://github.com/MatthewUbalde/King-of-the-Cheese
 ---
 
+import { YouTube } from "astro-embed";
+
 # A Fan-game for King of the Hat
 
 A fan-game created for _King of the Hat_ (owned by Hat Games) where you play as Dark Birthday and eat cheese in his dreams!
@@ -23,6 +25,8 @@ There's no win condition as you can only eat cheese in this game!
 It's made in Godot, and I make all the design, art, sounds, and music.
 
 It was inspired by a small joke within the community to make Dark Birthday canonically eat cheese. I liked the idea so much that I thought it would be cute to make a game out of it!
+
+<YouTube id="https://youtu.be/I6PqxMaTWXk?si=Er9sXnhjsuvm1Lp8" />
 
 # How it was created?
 
