minor changes to combo-spells

--- a/src/content/comp-experience/game/combo-spells.mdx
+++ b/src/content/comp-experience/game/combo-spells.mdx
@@ -123,13 +123,11 @@ And after months of working on it, it became something like this.
 
 ![Original picture of Combo Spells](./combo-spells/05.png)
 
-I added
-
-- A tree
-- Random Generative grass
-- Random clouds
-- More animation with character sprites
-- Shadows in some areas
+- Added a tree
+- Implemented random generative grass
+- Created moving clouds
+- Hard-coded more animation sprites
+- Then a added a few shadows in some areas
 
 And in addition to the GUI, all of this is done by trial and error.
 
