add a featured projects area to the landing page

--- a/src/content/comp-experience/game/combo-spells.mdx
+++ b/src/content/comp-experience/game/combo-spells.mdx
@@ -10,6 +10,7 @@ summaryPoints:
   - Simple in mechanics, but deep in strategies
   - One of the first "polished" games I've created
   - Struggled due to lack of skills and understanding of programming
+featured: false
 itchio: https://penrabbit.itch.io/combo-spells
 ---
 
