--- a/src/content/comp-experience/game/king-of-the-cheese.mdx
+++ b/src/content/comp-experience/game/king-of-the-cheese.mdx
@@ -3,13 +3,14 @@ title: King of the Cheese
 description: King of the Hat fan-game where you play as Dark Birthday and eat cheese in his dreams
 coverImage: ./king-of-the-cheese/cover.png
 coverImageAlt: Dark Birthday eating cheese in his dreams
+dateProjectPublished: Mar 29, 2023
+dateUpdated: Dec 26, 2024
 summaryPoints:
   - A fan-game for King of the Hat. Started as a meme within the community
   - Created in Godot - all of it is created by me
   - Find ways to keep it entertaining for a very simple game
   - Found ways to engage with the fan community
-dateProjectPublished: Mar 29, 2023
-dateUpdated: Dec 26, 2024
+featured: true
 itchio: https://penrabbit.itch.io/king-of-the-cheese
 github: https://github.com/MatthewUbalde/King-of-the-Cheese
 ---
