finish up combo-spells

--- a/src/content/comp-experience/game/combo-spells.mdx
+++ b/src/content/comp-experience/game/combo-spells.mdx
@@ -24,7 +24,7 @@ During high school was the first time I learned how to program, and Java was my 
 
 Combo Spells was my final assignment and originally looked like this.
 
-![Original picture of Combo Spells](./combo-spells/00.png)
+![Title screen of Combo Spells. Listing instructions on how to play.](./combo-spells/00.png)
 
 But I slowly refined it because of how fun the concept was.
 
@@ -43,7 +43,7 @@ This was a final school assignment. It's created in Java with the JFrame package
 
 It took me 3 weeks to finish and submit for the assignment, and came up with this.
 
-![Original picture of Combo Spells](./combo-spells/02.png)
+![Gameplay of Combo Spells. Player is attacking dummy.](./combo-spells/02.png)
 
 For this one, I decided that I wanted to create a fighting game! But I didn't know how to implement physics or even know what a class was. So I lowered the scope and made it a Score Attack where you just hit the dummy repeatedly.
 
@@ -57,7 +57,7 @@ For the past 3 weeks of working on this in school, and with additional updates a
 
 I wanted to have motion inputs and reward the player with powerful spells if they did a complex input. However, I didn't know how to make one (and I'm awful at motion inputs).
 
-INSERT ORIGINAL CONCEPT
+![Original sketch of the school project](./combo-spells/ske-01.jpg)
 
 So I let the player do it at their own pace, they can select a directional key, and then cast the spell whenever they want to.
 
@@ -75,7 +75,7 @@ Although I wished the controls weren't so...
 
 Unintuitive.
 
-INSERT KEYBIND
+![Player control scheme](./combo-spells/cs-control-scheme.png)
 
 ## A Game that is Deep in Strategy
 
@@ -114,15 +114,15 @@ The entire game's sprites, GUI, and animations are hard-coded with the JFrame. E
 
 It started off from this.
 
-![Original picture of Combo Spells](./combo-spells/01.png)
+![Working in progress version of Combo Spells. It's at the earliest version with no minimal graphics.](./combo-spells/01.png)
 
 To this...
 
-![Original picture of Combo Spells](./combo-spells/02.png)
+![2nd version of Combo Spells. The graphics are flat with strong colors. The player is attacking the dummy.](./combo-spells/02.png)
 
 And after months of working on it, it became something like this.
 
-![Original picture of Combo Spells](./combo-spells/05.png)
+![Final version of Combo Spells. There's a tree and areas have some shadows in them. The player going back to the right-side of the stage after casting.](./combo-spells/05.png)
 
 - Added a tree
 - Implemented random generative grass
@@ -160,7 +160,7 @@ And imagine like this with the other spells, grass generation, and so forth.
 
 Due to the unnecessary complications, I made a debugger menu on the side if you press "I" and extend the window to the left. You can see each individual variable and even the arrays for each object's property.
 
-INSERT DEBUG MENU
+![Debug menu that can be found on the right-side of the screen](./combo-spells/06.png)
 
 If I were to remake this, I would utilize objects and ArrayLists, but the great part about this is that it's highly performant! There isn't garbage allocation happening since the objects are created at compile-time. It has a similar effect to a server system found with heavy amounts of objects.
 
@@ -175,3 +175,11 @@ Starting from a 3-week high school project, I ended up working on it for a month
 And looking back, I can definitely see how much I've learned and developed my skills as a programmer. It's refreshing to see that I was incredibly passionate, and regardless of my poor practices, I was able to make something really great.
 
 I'm planning to remake this project with a better framework (or engine), better and friendlier controls, and while maintaining the core simple by design by deep in its mechanics. To turn this high-score game into the fighting game I've envisioned since I was young.
+
+# Additional Sketches
+
+Here are some additional sketches that I've made back then, when making the game. I even sketched original characters for it back then. Those were fun memories.
+
+![Sketch of the game's interface, and character concepts.](./combo-spells/ske-02.jpg)
+
+![Sketch that explores of another character named Merilyn. She has very round that's braided at the end like a pony-tail, and wears a patterned skirt that hints of her water abilities.](./combo-spells/ske-03.jpg)
