Large refactor and clean-up

--- a/src/content/comp-experience/game/combo-spells.mdx
+++ b/src/content/comp-experience/game/combo-spells.mdx
@@ -3,8 +3,8 @@ title: Combo Spells
 description: Made with Java and JavaFX during high school. One of the first programming projects I've made.
 coverImage: ./combo-spells/cover.png
 coverImageAlt: Screenshot of the project "Combo Spells"
-dateProjectPublished: "Jan 12, 2020"
-dateUpdated: "Dec 26, 2024"
+published: "Jan 12, 2020"
+updated: "Dec 26, 2024"
 summaryPoints:
   - Originally a final school project, and created in Java and JFrame package
   - Simple in mechanics, but deep in strategies
