--- a/src/content/comp-experience/game/king-of-the-cheese.mdx
+++ b/src/content/comp-experience/game/king-of-the-cheese.mdx
@@ -3,8 +3,8 @@ title: King of the Cheese
 description: King of the Hat fan-game where you play as Dark Birthday and eat cheese in his dreams
 coverImage: ./king-of-the-cheese/cover.png
 coverImageAlt: Dark Birthday eating cheese in his dreams
-dateProjectPublished: Mar 29, 2023
-dateUpdated: Jan 9, 2025
+published: Mar 29, 2023
+updated: Jan 9, 2025
 summaryPoints:
   - A fan-game for King of the Hat. Started as a meme within the community
   - Created in Godot - all of it is created by me
